Bug 1611997 - Invert the sign of the slant angle when mapping between CSS font-style and OpenType 'slnt' axis. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D61228

--HG--
extra : moz-landing-system : lando