gfx/thebes/gfxFontEntry.cpp
@@ -1234,9 +1234,12 @@ void gfxFontEntry::SetupVariationRanges() {
               SlantStyle().Min()) {
             mStandardFace = false;
           }
+          // OpenType and CSS measure angles in opposite directions, so we
+          // have to flip signs and swap min/max when setting up the CSS
+          // font-style range here.
           mStyleRange =
-              SlantStyleRange(FontSlantStyle::Oblique(axis.mMinValue),
-                              FontSlantStyle::Oblique(axis.mMaxValue));
+              SlantStyleRange(FontSlantStyle::Oblique(-axis.mMaxValue),
+                              FontSlantStyle::Oblique(-axis.mMinValue));
         }
         break;
 
@@ -1356,7 +1359,9 @@ void gfxFontEntry::GetVariationsForStyle(nsTArray<gfxFontVariation>& aResult,
     if (!(IsUserFont() && (mRangeFlags & RangeFlags::eAutoSlantStyle))) {
       angle = SlantStyle().Clamp(FontSlantStyle::Oblique(angle)).ObliqueAngle();
     }
-    aResult.AppendElement(gfxFontVariation{HB_TAG('s', 'l', 'n', 't'), angle});
+    // OpenType and CSS measure angles in opposite directions, so we have to
+    // invert the sign of the CSS oblique value when setting OpenType 'slnt'.
+    aResult.AppendElement(gfxFontVariation{HB_TAG('s', 'l', 'n', 't'), -angle});
   }
 
   auto replaceOrAppend = [&aResult](const gfxFontVariation& aSetting) {
